feat(ci): add gosec security scanner
Add Gosec security checker to CI pipeline for Go security analysis.
- Scans for common Go security issues (G101-G505)
- Outputs SARIF format for GitHub Security tab integration
- Runs in parallel with other security checks (Semgrep, secret-detection)
- Uploads results even if check fails for visibility

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,25 @@ jobs:
         with:
           config: auto
 
+  gosec:
+    name: Gosec Security Check
+    runs-on: [self-hosted, Linux, X64, playground-ubuntu]
+    permissions:
+      security-events: write
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Run Gosec Security Scanner
+        uses: securego/gosec@master
+        with:
+          args: "-fmt sarif -out results.sarif ./..."
+
+      - name: Upload SARIF file
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: results.sarif
+        if: always()
+
   # === QUALITY STAGE ===
   lint:
     name: Lint
