feat(ci): add dependency review action
Add GitHub Dependency Review action to scan for vulnerable dependencies
in pull requests.
- Scans go.mod changes in PRs for known vulnerabilities
- Fails on moderate severity and above
- Posts summary comment on PR when issues found
- Only runs on pull requests (not pushes to master)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -159,6 +159,21 @@ jobs:
         run: make test-race
 
   # === DEPENDENCY SECURITY ===
+  dependency-review:
+    name: Dependency Review
+    runs-on: [self-hosted, Linux, X64, playground-ubuntu]
+    if: github.event_name == 'pull_request'
+    permissions:
+      contents: read
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Dependency Review
+        uses: actions/dependency-review-action@v4
+        with:
+          fail-on-severity: moderate
+          comment-summary-in-pr: on-failure
+
   govulncheck:
     name: Vulnerability Check
     runs-on: [self-hosted, Linux, X64, playground-ubuntu]
